feat: Po zabawie pudełkami i zmiania layoutu. Może być trochę brudno.

--- a/style.css
+++ b/style.css
@@ -28,13 +28,56 @@ p {
 	color: #0496ff;
 }
 
-.about {
-	
-}
+.about {}
 
 .paragraph {
 	padding: 16px;
 }
-.main{width: 100%;
+
+.main {
+	width: 100%;
 	max-width: 700px;
-	margin: 32px auto;}
+	margin: 32px auto;
+	padding-top: 50px;
+}
+
+.box, .boxTest {
+	width: 100px;
+	height: 100px;
+	background: yellowgreen;
+	padding: 10px;
+	box-sizing: border-box;
+	border: 10px solid red;
+	box-sizing: border-box;
+	position: absolute;
+	top: 10px;
+	right: 50%;
+}
+
+.box {
+	z-index: 2;
+	position: sticky;
+}
+
+.boxTest {
+	top: 30px;
+	right: 55%;
+	background: blueviolet;
+}
+
+.top {
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	color: #1a936f;
+	text-decoration: none;
+}
+
+.navigation {
+	position: fixed;
+	width: 100%;
+	top: 10px;
+	left: 0;
+	box-sizing: border-box;
+	padding: 16px;
+}
