--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ html {
 }
 
 body {
-	background: #fefefe;
+	background-color: #08AEEA;
+background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
 	color: #333;
 }
 
@@ -86,6 +87,8 @@ body {
 }
 
 .navigation {
+	background-color: #08AEEA;
+background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
 	display: flex;
 	justify-content: center;
 }
